[metadata]
name = tox-envfile
description = Load env files in your tox envs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hypothesis/tox-envfile
project_urls =
    Bug Tracker = https://github.com/hypothesis/tox-envfile/issues
    Changelog = https://github.com/hypothesis/tox-envfile/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    python-dotenv

[options.packages.find]
where = src

[options.entry_points]
tox =
    tox-envfile = tox_envfile

[pycodestyle]
ignore =
    # Disable pycodestyle errors and warnings that we don't care about because
    # Black formats our code for us.
    E203,  # Whitespace before ':',
    E231,  # Missing whitespace after ',',
    E501,  # Line too long,
    W503,  # Line break before binary operator,

    # Bare except. PyLint finds these for us so we don't need pycodestyle to.
    E722,
